--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CoolWeather</string>
+    <string name="exchangecity">切换城市</string>
+    <string name="lastupdate_time">更新天气信息</string>
 </resources>
